RESOLVED FIXED211550
Fix broken exceptionFuzz tests.
https://bugs.webkit.org/show_bug.cgi?id=211550
Summary Fix broken exceptionFuzz tests.
Mark Lam
Reported 2020-05-06 22:56:27 PDT
The exceptionFuzz tests should not be relying on setting a JSC Option at runtime. Instead, we set the needed --useExceptionFuzz=true option from the command line.
Attachments
proposed patch. (5.66 KB, patch)
2020-05-06 23:03 PDT, Mark Lam
no flags
Mark Lam
Comment 1 2020-05-06 23:03:13 PDT
Created attachment 398704 [details] proposed patch.
Yusuke Suzuki
Comment 2 2020-05-06 23:17:30 PDT
Comment on attachment 398704 [details] proposed patch. r=me
EWS
Comment 3 2020-05-07 00:00:22 PDT
Committed r261271: <https://trac.webkit.org/changeset/261271> All reviewed patches have been landed. Closing bug and clearing flags on attachment 398704 [details].
Radar WebKit Bug Importer
Comment 4 2020-05-07 00:01:18 PDT
Note You need to log in before you can comment on or make changes to this bug.