Fix broken exceptionFuzz tests. https://bugs.webkit.org/show_bug.cgi?id=211550

Reviewed by Yusuke Suzuki.

JSTests:

The tests should not be relying on setting a JSC Option at runtime because the
options are already frozen by then.  Instead, we set the needed
--useExceptionFuzz=true option from the command line.

* exceptionFuzz/3d-cube.js:
* exceptionFuzz/date-format-xparb.js:
* exceptionFuzz/earley-boyer.js:

Source/JavaScriptCore:

Remove the bad and now unused utility function to set Options::useExceptionFuzz().

* tools/JSDollarVM.cpp:
(JSC::JSDollarVM::finishCreation):
(JSC::functionEnableExceptionFuzz): Deleted.

Tools:

Pass the --useExceptionFuzz=true option from the command line for runExceptionFuzz.

* Scripts/run-jsc-stress-tests:


Canonical link: https://commits.webkit.org/224444@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@261271 268f45cc-cd09-0410-ab3c-d52691b4dbfc