JSTests/exceptionFuzz/3d-cube.js
@@ -1,13 +1,8 @@
-var enableExceptionFuzz = $vm.enableExceptionFuzz;
-
 try {
 
 // 3D Cube Rotation
 // http://www.speich.net/computer/moztesting/3d.htm
 // Created by Simon Speich
-
-enableExceptionFuzz();
-
 
 var Q = new Array();
 var MTrans = new Array();  // transformation matrix
